--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
+        <dependency>
+            <groupId>net.thucydides</groupId>
+            <artifactId>thucydides</artifactId>
+            <version>0.9.275</version>
+        </dependency>
     </dependencies>
 
 
