--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,10 @@
     <groupId>hometask</groupId>
     <artifactId>hometask-1.0</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <thucydides.version>0.9.275</thucydides.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -31,10 +35,38 @@
         </dependency>
         <dependency>
             <groupId>net.thucydides</groupId>
-            <artifactId>thucydides</artifactId>
+            <artifactId>thucydides-core</artifactId>
+            <version>0.9.275</version>
+        </dependency>
+        <dependency>
+            <groupId>net.thucydides</groupId>
+            <artifactId>thucydides-jbehave</artifactId>
+            <version>0.9.278</version>
+        </dependency>
+        <dependency>
+            <groupId>net.thucydides</groupId>
+            <artifactId>thucydides-junit</artifactId>
             <version>0.9.275</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>net.thucydides.maven.plugins</groupId>
+                <artifactId>maven-thucydides-plugin</artifactId>
+                <version>${thucydides.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
